[gd_scene load_steps=8 format=3 uid="uid://d2lamfsugabqv"]

[ext_resource type="Script" path="res://Scene/Swamp_Level_1/Traps/Acid/acid.gd" id="1_a4ljw"]
[ext_resource type="Texture2D" uid="uid://7r2lo8rcefg8" path="res://Sprites/SwampLevel1/Items/Acid/Acid_0.png" id="1_obmfy"]
[ext_resource type="Texture2D" uid="uid://dfogt3n6h8lbl" path="res://Sprites/SwampLevel1/Items/Acid/Acid_1.png" id="2_cv8iy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3veg3"]
radius = 8.0
height = 18.0

[sub_resource type="Animation" id="Animation_y3glv"]
resource_name = "drop"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acid_mid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, 8), Vector2(0, 8), Vector2(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acid_mid/Acid_bottom:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.7, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 7.5), Vector2(0, 9.5), Vector2(0, 9.5), Vector2(0, 7.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Acid_mid/Acid_bottom/Acid_drop:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -2), Vector2(0, -2), Vector2(0, 4), Vector2(0, 230), Vector2(0, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Acid_mid/Acid_bottom/Acid_drop:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 6), Vector2(0, 12), Vector2(0, 12), Vector2(0, 18), Vector2(0, 132), Vector2(0, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_0efu7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acid_mid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acid_mid/Acid_bottom:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.25, 7.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Acid_mid/Acid_bottom/Acid_drop:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Acid_mid/Acid_bottom/Acid_drop:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulweu"]
_data = {
"RESET": SubResource("Animation_0efu7"),
"drop": SubResource("Animation_y3glv")
}

[node name="Acid" type="Area2D"]
modulate = Color(0.65098, 0.65098, 0.65098, 1)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_a4ljw")

[node name="Acid_static" type="Sprite2D" parent="."]
texture = ExtResource("1_obmfy")

[node name="Acid_mid" type="Sprite2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_obmfy")

[node name="Acid_bottom" type="Sprite2D" parent="Acid_mid"]
position = Vector2(-1.25, 7.5)
scale = Vector2(0.625, 0.625)
texture = ExtResource("1_obmfy")

[node name="Acid_drop" type="Sprite2D" parent="Acid_mid/Acid_bottom"]
position = Vector2(2, -8)
scale = Vector2(2, 2)
texture = ExtResource("2_cv8iy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_3veg3")
disabled = true
debug_color = Color(0.733333, 0.435294, 0.505882, 0.756863)

[node name="Timer_drop" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Animation_drop_acid" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ulweu")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer_drop" to="." method="_on_timer_drop_timeout"]
